src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AD_Business_Area__c</fullName>
        <label>AD Business Area</label>
        <picklist>
            <controllingField>AD_Industry__c</controllingField>
            <picklistValues>
                <fullName>Rotary wing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed wing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed wing - narrow body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed wing - wide body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed wing - business jet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed wing - General aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troop carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphibious vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured engineering vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air defence vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submarine - diesel electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submarine - nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small lift launch vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium lift launch vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy lift launch vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super heavy lift launch vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AD_Distribution_Channel__c</fullName>
        <label>AD Distribution Channel</label>
        <picklist>
            <controllingField>AD_Industry__c</controllingField>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured Fighting Vehicles [Security]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AD_Industry__c</fullName>
        <label>AD Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Space (Launcher)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS [Battery Monitoring System]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acct_Auto__c</fullName>
        <description>Account Auto Number used for BaaN integration</description>
        <displayFormat>{0000000}</displayFormat>
        <label>Acct Auto#</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Address_Code__c</fullName>
        <label>Address Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>Used for EMEA LOB only</description>
        <label>Business Area</label>
        <picklist>
            <controllingField>Distribution_Channel__c</controllingField>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vodafone Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerson group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Food Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistic Operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports and Warehouses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel and Metal Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotary Wind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Wing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Wing - Narrow Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Wing - Business Jet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Wing - General Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troop Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphibious Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured Engineering Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Defense Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surface Vessel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submarine - Diesel Electric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submarine - Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Lift Launch Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium Lift Launch Vehicle</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Number_Pick__c</fullName>
        <globalPicklist>Company_Number</globalPicklist>
        <label>Company #</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Number__c</fullName>
        <description>Customer Number from Customer Master Databases</description>
        <label>Company Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Data__c</fullName>
        <inlineHelpText>Integrated field showing the email where financial correspondences should be sent.</inlineHelpText>
        <label>Financial Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Language</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Customer Language - CL</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Customer Language)</relationshipLabel>
        <relationshipName>Customer_Language</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Terms</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Delivery Terms - DT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Delivery Terms)</relationshipLabel>
        <relationshipName>Accounts_Delivery_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End-User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power System Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VADs/System Integrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor / Agent (excluding VADs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Dealers and Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armoured Fighting Vehicles</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_CLASS__c</fullName>
        <label>EMEA CLASS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMEA_JSON_Date_Time__c</fullName>
        <label>EMEA JSON Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EMEA_JSON__c</fullName>
        <label>EMEA JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Quote_Ready__c</fullName>
        <formula>AND(ISBLANK(SAP_Customer_Id__c),ISBLANK(EMEA_SAP_Quote_Required_Data_Checklist__c))</formula>
        <label>EMEA SAP Quote Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Quote_Required_Data_Checklist__c</fullName>
        <formula>&quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA SAP Quote Required Data Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Ready__c</fullName>
        <formula>AND(ISBLANK(SAP_Customer_Id__c),ISBLANK(EMEA_SAP_Required_Data_Checklist__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA SAP Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMEA_SAP_Required_Data_Checklist__c</fullName>
        <description>Formula field to make the user message for missing required field for SAP</description>
        <formula>IF(ISBLANK( BillingCity ), &quot;Please add a City; &quot;, &quot;&quot;) 
&amp; 
IF(ISBLANK(  BillingCountry ), &quot;Please add a Country; &quot;, &quot;&quot;)
&amp; 
IF(ISBLANK(  Transportation_Zone__c  ), &quot;Please add a Transportation Zone; &quot;, &quot;&quot;)
&amp; 
IF(ISBLANK(  Customer_Language__c  ), &quot;Please add a Customer Language; &quot;, &quot;&quot;)
&amp; 
IF( Number_of_SADs__c &lt; 1 , &quot;Please add a Sales Area Data; &quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMEA SAP Required Data Checklist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Customer Master</description>
        <inlineHelpText>Generic email for the company</inlineHelpText>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <description>External Id for Accounts
For Baan Account, it is generated as &apos;B-&apos;+Company_Number+&apos;-&apos;+Customer_Number</description>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Custom Industry field for EMEA Classifications</description>
        <label>Industry (Delete)</label>
        <picklist>
            <controllingField>LOB_EMEA__c</controllingField>
            <picklistValues>
                <fullName>AGV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGV-LGV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arial Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burden Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklifts and Industrial trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSE - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hand Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Truck Narrow Isle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Truck Rider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other End Users MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Lighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail Locomotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail MP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sea</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOB_EMEA__c</fullName>
        <description>EMEA Line of Business</description>
        <inlineHelpText>EMEA Line of Business</inlineHelpText>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>Motive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Message__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Tag__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Inbound_Time__c</fullName>
        <description>Used for integration</description>
        <label>Last Inbound Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MP_Business_Area__c</fullName>
        <label>MP Business Area</label>
        <picklist>
            <controllingField>MP_Industry__c</controllingField>
            <picklistValues>
                <fullName>Food Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Food Retailers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistic Operators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ports and Warehouses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMCG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel and Metal Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_Distribution_Channel__c</fullName>
        <label>MP Distribution Channel</label>
        <picklist>
            <controllingField>MP_Industry__c</controllingField>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery dealer / distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MP_Industry__c</fullName>
        <label>MP Industry</label>
        <picklist>
            <picklistValues>
                <fullName>AGV-LGV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing Plants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forklifts / industrial trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other End Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name2__c</fullName>
        <description>Direct Map from Customer Master</description>
        <label>Name2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name3__c</fullName>
        <label>Name3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name4__c</fullName>
        <label>Name4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Manually maintained checkbox to designate National Accounts.  Only accessible to edit by certain roles/profiles.</inlineHelpText>
        <label>National</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_SADs__c</fullName>
        <label># of SADs</label>
        <summaryForeignKey>Sales_Area_data__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_DUNS_number__c</fullName>
        <description>To store parent duns number for indexed searches</description>
        <label>Parent DUNS number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Terms</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Payment Terms - PT</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Payment Terms)</relationshipLabel>
        <relationshipName>Accounts_Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prospect__c</fullName>
        <description>Prospect # for Prospect Account Record Types</description>
        <formula>Acct_Auto__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prospect #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Protective_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Protective Account - only updated by EnerSys Marketing Directors.  If Checked, any quote where the account is used would need to go in for price approval.</description>
        <label>Protective Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RP_Distribution_Channel__c</fullName>
        <label>RP Distribution Channel</label>
        <picklist>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power System Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value added distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery dealer / distributor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RP_Industry__c</fullName>
        <label>RP Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Code</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Reference__c.Code_Type__c</field>
                <operation>equals</operation>
                <value>Region Code - RC</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Reference__c</referenceTo>
        <relationshipLabel>Accounts (Region Code)</relationshipLabel>
        <relationshipName>Region_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Shipping Accounts</relationshipLabel>
        <relationshipName>Related_Shipping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SAP Customer Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Ship_To__c</fullName>
        <description>KTOKD from SAP 0001 FOR sold to, 0002 for ship to only.</description>
        <label>SAP Ship To</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__AssetQuantitiesCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</description>
        <inlineHelpText>Option to combine quantities of multiple assets for the same product into one line when renewal quote is generated.</inlineHelpText>
        <label>Combine Asset Quantities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTermedContractsCombined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that controls whether assets and subscriptions from multiple co-teremed contracts are rolled up together. By default, each co-termed contract generates a separate group on renewal quote.</description>
        <inlineHelpText>Enable to combine assets and subscriptions from multiple co-termed contracts. By default, each co-termed contract generates a separate group on renewal quote.</inlineHelpText>
        <label>Combine Co-Termed Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CoTerminationEvent__c</fullName>
        <description>Determines when contracts are co-terminated.</description>
        <inlineHelpText>Determines when contracts are co-terminated.</inlineHelpText>
        <label>Co-Termination Event</label>
        <picklist>
            <controllingField>SBQQ__ContractCoTermination__c</controllingField>
            <picklistValues>
                <fullName>Add-on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractCoTermination__c</fullName>
        <description>Determines how service and subscription contracts for this customer are co-terminated.</description>
        <inlineHelpText>Determines how service and subscription contracts for this customer are co-terminated.</inlineHelpText>
        <label>Contract Co-Termination</label>
        <picklist>
            <picklistValues>
                <fullName>Never</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Always</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prompt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</description>
        <inlineHelpText>Default opportunity for this account used by an e-Commerce module to obtain the customer&apos;s price book and associate with &quot;shopping cart&quot; quotes.</inlineHelpText>
        <label>Default Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>WebAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__IgnoreParentContractedPrices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if contracted prices should not be inherited from the parent account.</description>
        <inlineHelpText>Select if contracted prices should not be inherited from the parent account.</inlineHelpText>
        <label>Ignore Parent Contracted Prices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PreserveBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select to maintain bundle hierarchy on renewal quotes and amendments</description>
        <inlineHelpText>Select checkbox to maintain bundle hierarchy on renewal quotes and amendments.</inlineHelpText>
        <label>Preserve Bundle Structure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceHoldEnd__c</fullName>
        <description>End date for any price hold that may be in effect.</description>
        <inlineHelpText>Enter date until which the prices must be held.</inlineHelpText>
        <label>Price Hold End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalModel__c</fullName>
        <description>The option to distinguish between Subscription or Asset based renewal.</description>
        <inlineHelpText>Choose Asset Based to make renewals based off of an account&apos;s Assets or choose Subscription based to makes renewals based off of subscriptions created from a quote.</inlineHelpText>
        <label>Renewal Model</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Based</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>